--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,5 +1,4 @@
 footer {
-    height: 400px;
     margin-top: 50px;
     background-color: $violet;
     position: relative;
@@ -21,6 +20,7 @@ footer {
     .footer-content {
         max-width: 720px;
         margin: auto;
+        padding: 0 0 60px 0;
         align-items: flex-start;
         justify-content: space-between;
         section {
