--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Work+Sans:wght@100;200;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Work+Sans:wght@100;200;300;400;500;700&display=swap');
