--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,22 +1,17 @@
 footer {
-    margin-top: 50px;
-    background-color: $violet;
+    margin-top: 83px;
     position: relative;
-    z-index: 3;
+    background-color: $violet;
     color: $blanc;
     justify-content: flex-end;
-    &:before {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 150px;
+
+    .vague {
         position: absolute;
-        top:-149px;
-        background-image: url("../img/forme-module-3-horizontale-footer.svg");
-        background-size: 120%;
-        background-position-x: center;
-        background-repeat: no-repeat;
+        z-index: -1;
+        bottom: 0px;
+        width: 1440px;
     }
+
     .footer-content {
         max-width: 720px;
         margin: auto;
@@ -31,9 +26,9 @@ footer {
                     justify-content: flex-start;
                     align-items: flex-start;
                     a {
-                        transition: .5s ease;
+                        transition: 0.5s ease;
                     }
-                    &:hover{
+                    &:hover {
                         color: $canari;
                     }
                 }
@@ -48,7 +43,6 @@ footer {
                 width: 40%;
                 ul {
                     li {
-                        
                         &:before {
                             display: block;
                             width: 20px;
@@ -85,6 +79,10 @@ footer {
                         }
                         img {
                             width: 30px;
+                        }
+                        &:hover {
+                            filter: brightness(0) saturate(100%) invert(73%) sepia(17%) saturate(1639%)
+                                hue-rotate(358deg) brightness(102%) contrast(101%);
                         }
                     }
                 }
