--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,5 +1,4 @@
 header {
-    height: 900px;
     background-color: $creme;
     .dropdown {
         position: fixed;
@@ -10,7 +9,7 @@ header {
         background: $creme;
         width: 100vw;
         height: 100vh;
-        transition: .8s ease;
+        transition: 0.8s ease;
         &.dropdown-on {
             position: fixed;
             z-index: 98;
@@ -23,21 +22,35 @@ header {
             }
         }
     }
-    .illustration-flottante {
-        position: absolute;
-        width: 350px;
-        top: 10%;
-        left: 30%;
-    }
     nav {
         width: 100%;
-        height: 90px;
+        height: 100px;
         position: fixed;
         z-index: 99;
         background-color: $creme;
         &.nav-1 {
             padding: 0 80px;
             justify-content: space-between;
+
+            a {
+                font-family: Work Sans;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 12px;
+
+                &.cta-newsletter {
+                    width: 150px;
+                    height: 50px;
+                    line-height: 50px;
+                    background-color: $creme;
+                    color: $violet;
+                    &:hover {
+                        background-color: $canari;
+                        color: $violet;
+                    }
+                }
+            }
         }
         &.nav-2 {
             display: none;
@@ -54,7 +67,7 @@ header {
                     x: 3.5;
                     rx: 3px;
                     ry: 3px;
-                    transition: .4s ease;
+                    transition: 0.4s ease;
                     transform-origin: center;
                 }
                 &.burger-off {
@@ -62,13 +75,13 @@ header {
                         width: 33px;
                         height: 4px;
                         &:nth-child(1) {
-                            y: 7;  
+                            y: 7;
                         }
                         &:nth-child(2) {
-                            y: 13;  
+                            y: 13;
                         }
                         &:nth-child(3) {
-                            y: 19;  
+                            y: 19;
                         }
                     }
                 }
@@ -83,8 +96,8 @@ header {
                             transform: rotate(45deg);
                         }
                         &:nth-child(2) {
-                            y: 13;  
-                            opacity: 0;  
+                            y: 13;
+                            opacity: 0;
                         }
                         &:nth-child(3) {
                             width: 18px;
@@ -98,11 +111,11 @@ header {
                     rect {
                         width: 14px;
                         height: 3px;
-                        fill:#61269e;
+                        fill: #61269e;
                         y: 6;
                         rx: 2px;
                         ry: 2px;
-                        transition: .4s ease;
+                        transition: 0.4s ease;
                         &:nth-child(1) {
                             x: 11;
                             y: 11;
@@ -116,7 +129,7 @@ header {
                     }
                 }
                 &:hover {
-                    cursor: pointer;
+                    cursor: url("../img/cursor-yellow.png"), default;
                     rect {
                         fill: $canari;
                     }
@@ -125,9 +138,9 @@ header {
         }
         .nav-logo {
             height: 100%;
-            padding: 20px 0;
+            padding: 30px 0;
             img {
-                height: inherit;
+                height: 50px;
             }
         }
         ul {
@@ -147,10 +160,10 @@ header {
                         width: 0px;
                         opacity: 0;
                         background-color: $violet;
-                        transition: .4s ease;
+                        transition: 0.4s ease;
                     }
                 }
-                &:hover{
+                &:hover {
                     a {
                         color: $violet;
                         &:after {
